--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon api/index.js",
+    "seed": "node api/config/seed.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
-    "sequelize": "^6.25.0"
+    "sequelize": "^6.25.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
